; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_gx.c_GX_InitTexObjFilterMode.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_gx.c_GX_InitTexObjFilterMode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.__gx_texobj = type { i32 }

@GX_InitTexObjFilterMode.GX2HWFiltConv = internal global [8 x i32] [i32 0, i32 4, i32 1, i32 5, i32 2, i32 6, i32 0, i32 0], align 16
@GX_LINEAR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @GX_InitTexObjFilterMode(i32* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.__gx_texobj*, align 8
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i32*, i32** %4, align 8
  %9 = bitcast i32* %8 to %struct.__gx_texobj*
  store %struct.__gx_texobj* %9, %struct.__gx_texobj** %7, align 8
  %10 = load %struct.__gx_texobj*, %struct.__gx_texobj** %7, align 8
  %11 = getelementptr inbounds %struct.__gx_texobj, %struct.__gx_texobj* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = and i32 %12, -17
  %14 = load i32, i32* %6, align 4
  %15 = load i32, i32* @GX_LINEAR, align 4
  %16 = icmp eq i32 %14, %15
  %17 = zext i1 %16 to i64
  %18 = select i1 %16, i32 1, i32 0
  %19 = call i32 @_SHIFTL(i32 %18, i32 4, i32 1)
  %20 = or i32 %13, %19
  %21 = load %struct.__gx_texobj*, %struct.__gx_texobj** %7, align 8
  %22 = getelementptr inbounds %struct.__gx_texobj, %struct.__gx_texobj* %21, i32 0, i32 0
  store i32 %20, i32* %22, align 4
  %23 = load %struct.__gx_texobj*, %struct.__gx_texobj** %7, align 8
  %24 = getelementptr inbounds %struct.__gx_texobj, %struct.__gx_texobj* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = and i32 %25, -225
  %27 = load i32, i32* %5, align 4
  %28 = sext i32 %27 to i64
  %29 = getelementptr inbounds [8 x i32], [8 x i32]* @GX_InitTexObjFilterMode.GX2HWFiltConv, i64 0, i64 %28
  %30 = load i32, i32* %29, align 4
  %31 = call i32 @_SHIFTL(i32 %30, i32 5, i32 3)
  %32 = or i32 %26, %31
  %33 = load %struct.__gx_texobj*, %struct.__gx_texobj** %7, align 8
  %34 = getelementptr inbounds %struct.__gx_texobj, %struct.__gx_texobj* %33, i32 0, i32 0
  store i32 %32, i32* %34, align 4
  ret void
}

declare dso_local i32 @_SHIFTL(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
